fixed header bug. hide article overflow

--- a/assets/css/3-sections/_home-articles.sass
+++ b/assets/css/3-sections/_home-articles.sass
@@ -14,6 +14,7 @@ section.articles
 	.article-wrap
 		margin: -50px 0
 		+clearfix
+		overflow: hidden
 
 	.article-thumb
 		display: block
@@ -73,15 +74,15 @@ section.articles
 @keyframes tada
   0%
     transform: scale3d(1, 1, 1)
- 
+
   10%, 20%
     transform: scale3d(.9, .9, .9) rotate3d(0, 0, 1, -3deg)
- 
+
   30%, 50%, 70%, 90%
     transform: scale3d(1.1, 1.1, 1.1) rotate3d(0, 0, 1, 3deg)
 
   40%, 60%, 80%
     transform: scale3d(1.1, 1.1, 1.1) rotate3d(0, 0, 1, -3deg)
- 
+
   100%
     transform: scale3d(1, 1, 1)
