--- a/assets/css/3-sections/_home-footer.sass
+++ b/assets/css/3-sections/_home-footer.sass
@@ -1,15 +1,31 @@
 .home-footer
+	background-color: #b8b8b8
 	a
-		color: #000000
-		background-color: #F5F5F5
+		color: transparent
+		background-color: #565656
 		display: block
 		width: 100%
 		line-height: 6
 		text-align: center
 		font-size: 70px
 		font-weight: 600
+		text-shadow: 0px 2px 3px rgba(255,255,255,0.45)
+		-webkit-background-clip: text
+     -moz-background-clip: text
+          background-clip: text
 		transition: background 100ms ease-in-out
-	
+
+		@media (max-width: 895px)
+			font-size: 50px
+
+		@media (max-width: 650px)
+			font-size: 35px
+
+		@media (max-width: 450px)
+			font-size: 20px
+
 		&:hover
-			background: darken(#F5F5F5, 10%)
-			text-decoration: underline
+			text-shadow: 0px 2px 3px rgba(255,255,255,0.3)
+			-webkit-background-clip: text
+	     -moz-background-clip: text
+	          background-clip: text
