--- a/assets/css/3-sections/_home-youtube.sass
+++ b/assets/css/3-sections/_home-youtube.sass
@@ -20,7 +20,7 @@ section.youtube
 		// 	position: center
 
 		@media (max-width: 985px)
-			transform: scale(1)		
+			transform: scale(1)
 
 	.video-strip
 		//background: pink
@@ -36,7 +36,7 @@ section.youtube
 			size: 70%
 
 		@media (max-width: 640px)
-			display: none;
+			display: none
 
 	.col-1
 		position: relative
